# nn-fire

./: .gitignore  .pylintrc  common.sh  ec2-ssh-interface.sh  notebook.ipynb  pyproject.toml  run-aws.sh  run-notebook.sh  setup-environment.sh  start-aws-runner.sh  template.yaml
dataset/: test_0.csv  test_1.csv  test_2.csv  test_3.csv  test_4.csv  train_0.csv  train_1.csv  train_2.csv  train_3.csv  train_4.csv
experimenter/: model.py  parallel.py  ray_runner.py  remote.py  train.py
