[tool.poetry]
name = "experimenter"
version = "0.1.0"
description = ""
authors = ["ggzor <30713864+ggzor@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
scikit-learn = "^1.0"
numpy = "^1.21.3"
altair = "^4.1.0"
vega = "^3.5.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pynvim = "^0.4.3"
pylint = "^2.11.1"
rope = "^0.21.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
